--- a/PetBackerSBD/src/main/java/ec/edu/espol/petbackersbd/FormDonación.form
+++ b/PetBackerSBD/src/main/java/ec/edu/espol/petbackersbd/FormDonación.form
@@ -264,6 +264,9 @@
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tbDonacionesMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
