--- a/PetBackerSBD/src/main/java/ec/edu/espol/petbackersbd/FormServicio.form
+++ b/PetBackerSBD/src/main/java/ec/edu/espol/petbackersbd/FormServicio.form
@@ -210,6 +210,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Guardar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGuardarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnModificar">
           <Properties>
@@ -305,6 +308,9 @@
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tbServiciosMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
