Un tercer gran paso para la humanidad

--- a/PetBackerSBD/src/main/java/formularios/FormServicio.form
+++ b/PetBackerSBD/src/main/java/formularios/FormServicio.form
@@ -187,6 +187,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtidSer">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtidSerActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtidCui">
         </Component>
